--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "next": "13.0.1",
+    "next-sanity": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanity": "^3.0.0-dev-preview.22",
+    "styled-components": "^5.3.6",
     "typescript": "4.8.4"
   },
   "devDependencies": {
