--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mux/mux-player-react": "^1.3.0",
     "@next/font": "^13.0.1",
     "@sanity/vision": "3.0.0-rc.0",
     "@types/node": "18.11.9",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.0.0-dev-preview.22",
+    "sanity-plugin-mux-input": "^2.0.0-v3-studio.20",
     "styled-components": "^5.3.6",
     "typescript": "4.8.4"
   },
