--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@liveblocks/client": "^0.19.0",
+    "@liveblocks/node": "^0.18.5",
+    "@liveblocks/react": "^0.19.0",
     "@mux/mux-player-react": "^1.3.0",
     "@next/font": "^13.0.1",
     "@sanity/vision": "3.0.0-rc.0",
@@ -18,8 +21,10 @@
     "@vercel/analytics": "^0.1.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "nanoid": "^4.0.0",
     "next": "13.0.1",
     "next-sanity": "^1.0.3",
+    "perfect-freehand": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.0.0-dev-preview.22",
