--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/analytics": "^0.1.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "framer-motion": "^7.6.5",
     "nanoid": "^4.0.0",
     "next": "13.0.1",
     "next-sanity": "^1.0.3",
