--- a/package.json
+++ b/package.json
@@ -16,18 +16,17 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@vercel/analytics": "^0.1.3",
+    "classnames": "^2.3.2",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "framer-motion": "^7.6.5",
     "nanoid": "^4.0.0",
     "next": "13.0.1",
     "next-sanity": "^1.0.3",
-    "perfect-freehand": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.0.0-dev-preview.22",
     "sanity-plugin-mux-input": "^2.0.0-v3-studio.20",
-    "styled-components": "^5.3.6",
     "typescript": "4.8.4"
   },
   "devDependencies": {
