--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@mux/mux-player-react": "^1.3.0",
     "@next/font": "^13.0.1",
-    "@sanity/vision": "3.0.0-rc.0",
+    "@sanity/vision": "^3.0.0-rc.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
@@ -25,8 +25,8 @@
     "next-sanity": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sanity": "^3.0.0-dev-preview.22",
-    "sanity-plugin-mux-input": "^2.0.0-v3-studio.20",
+    "sanity": "^3.0.6",
+    "sanity-plugin-mux-input": "^2.0.2",
     "typescript": "4.8.4"
   },
   "devDependencies": {
