--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
-    "framer-motion": "^7.6.5",
+    "framer-motion": "^8.0.2",
     "nanoid": "^4.0.0",
     "next": "13.0.1",
     "next-sanity": "^1.0.3",
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "sanity": "^3.0.6",
     "sanity-plugin-mux-input": "^2.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.8.4"
   },
   "devDependencies": {
