--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@mux/mux-player-react": "^1.3.0",
-    "@next/font": "^13.0.1",
+    "@next/font": "^13.1.1",
     "@sanity/vision": "^3.0.0-rc.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
@@ -21,7 +21,7 @@
     "eslint-config-next": "13.0.1",
     "framer-motion": "^8.0.2",
     "nanoid": "^4.0.0",
-    "next": "13.0.1",
+    "next": "^13.1.1",
     "next-sanity": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
