--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@mux/mux-player-react": "^1.3.0",
     "@next/font": "^13.1.1",
+    "@portabletext/react": "^2.0.0",
+    "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0-rc.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
@@ -22,7 +24,7 @@
     "framer-motion": "^8.0.2",
     "nanoid": "^4.0.0",
     "next": "^13.1.1",
-    "next-sanity": "^1.0.3",
+    "next-sanity": "^4.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.0.6",
