--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mux/mux-player-react": "^1.3.0",
     "@next/font": "^13.1.1",
     "@portabletext/react": "^2.0.0",
+    "@sanity/color-input": "^3.0.2",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^3.0.0-rc.0",
     "@types/node": "18.11.9",
@@ -27,6 +28,7 @@
     "next-sanity": "^4.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "sanity": "^3.0.6",
     "sanity-plugin-mux-input": "^2.0.2",
     "tailwind-scrollbar-hide": "^1.1.7",
