--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "framer-motion": "^8.0.2",
+    "gsap": "^3.11.4",
     "nanoid": "^4.0.0",
     "next": "^13.1.1",
     "next-sanity": "^4.0.4",
