--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.7.1",
     "sanity": "^3.0.6",
     "sanity-plugin-mux-input": "^2.0.2",
+    "split-type": "^0.3.3",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.8.4"
   },
