--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mux/mux-player-react": "^1.3.0",
+    "@mux/mux-video-react": "^0.7.2",
     "@next/font": "^13.1.1",
     "@portabletext/react": "^2.0.0",
     "@sanity/color-input": "^3.0.2",
