--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "sanity": "^3.2.4",
+    "sanity-plugin-media": "^2.0.4",
     "sanity-plugin-mux-input": "^2.0.2",
     "split-type": "^0.3.3",
     "tailwind-scrollbar-hide": "^1.1.7",
